panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__preprocessor__test_error_va_opt_missing_parenthesis.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/preprocessor/test_error_va_opt_missing_parenthesis.c
---
success: true
exit_code: 0
----- stdout -----






----- stderr -----
